--- a/BattleTank 4.24/Config/DefaultInput.ini
+++ b/BattleTank 4.24/Config/DefaultInput.ini
@@ -94,6 +94,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="Left Track Throttle",Scale=1.305659,Key=Left)
++AxisMappings=(AxisName="Right Track Throttle",Scale=1.104622,Key=Right)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
