--- a/BattleTank 4.24/Config/DefaultInput.ini
+++ b/BattleTank 4.24/Config/DefaultInput.ini
@@ -98,6 +98,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Down)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=Down)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
