--- a/BattleTank 4.24/Config/DefaultInput.ini
+++ b/BattleTank 4.24/Config/DefaultInput.ini
@@ -94,12 +94,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Down)
-+AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="TurnRight",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="TurnLeft",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="MoveBackward",Scale=-1.000000,Key=Down)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
